--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>話題一覧</title>
-    <link rel="stylesheet" href="ref_style.css">
+    <link rel="stylesheet" href="main_style.css">
 </head>
 <body>
     <div id="container">
@@ -17,9 +17,9 @@
         </nav>
         <div id="topics">
             <h1>話題一覧</h1>
-            <div>
+            <ul>
                 <!-- topics -->
-            </div>
+            </ul>
         </div>
         <input type="checkbox" id="postcheck" hidden>
         <div id="post">
