Implemented functionality to post new topics.

--- a/main.html
+++ b/main.html
@@ -25,6 +25,7 @@
         <div id="post">
             <h2>新しい話題</h2>
             <form action="" method="post">
+                <input type="hidden" name="operation" value="post_topic">
                 <input type="text" placeholder="タイトルを入力" name="title" required>
                 <textarea name="content" placeholder="概要を入力" required></textarea>
                 <input type="submit" value="投稿">
