Tidy up and fix up.

--- a/topic/index.html
+++ b/topic/index.html
@@ -28,7 +28,7 @@
             <h2>コメント</h2>
             <form action="" method="post">
                 <input type="hidden" name="topic_id" value="topicID">
-                <textarea name="content" id="" cols="30" rows="10" required></textarea>
+                <textarea name="content" placeholder="コメントを入力" cols="30" rows="8" required></textarea>
                 <input type="submit" value="投稿">
             </form>
         </div>
