--- a/topic/index.html
+++ b/topic/index.html
@@ -27,7 +27,8 @@
         <div id="post">
             <h2>コメント</h2>
             <form action="" method="post">
-                <input type="hidden" name="topic_id" value="topicID">
+                <input type="hidden" name="operation" value="post_comment">
+                <input type="hidden" name="topic_id" value="">
                 <textarea name="content" placeholder="コメントを入力" cols="30" rows="8" required></textarea>
                 <input type="submit" value="投稿">
             </form>
