--- a/account/index.html
+++ b/account/index.html
@@ -30,6 +30,7 @@
             <input type="hidden" name="operation" id="operation" value="login">
             <input type="submit" id="submit" value="ログイン">
         </form>
+        <div id="posts"></div>
     </div>
     <script src="account.js"></script>
 </body>
